--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="{% static 'css/blog.css' %}">
 	<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 	<title>Cotton Candy Blog</title>
 </head>
 <body>
@@ -29,6 +31,5 @@
             </div>
         </div>
     </div>
-
 </body>
 </html>
